{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 345,
  "lineage": "4f245453-6230-5114-919d-75fd62af7ad3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/BACKOFFICE_RESOURCES/providers/Microsoft.Network/networkInterfaces/Private-VM-NIC",
            "internal_domain_name_suffix": "r2qc1qb0c5fulkfki00kb1py3b.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Private-VM-IPConfig",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Private-Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-B1-03-20",
            "name": "Private-VM-NIC",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "BACKOFFICE_RESOURCES",
            "virtual_machine_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/BACKOFFICE_RESOURCES/providers/Microsoft.Compute/virtualMachines/BackOffice-VM"
          },
          "dependencies": [
            "azurerm_resource_group.backoffice_rg",
            "azurerm_resource_group.common_rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/PRODIGIESAI_RESOURCES/providers/Microsoft.Network/networkInterfaces/Public-VM-NIC",
            "internal_domain_name_suffix": "r2qc1qb0c5fulkfki00kb1py3b.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Public-VM-IPConfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/publicIPAddresses/Public-VM-PublicIP",
                "subnet_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Public-Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-BE-00-3B",
            "name": "Public-VM-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "PRODIGIESAI_RESOURCES",
            "virtual_machine_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/PRODIGIESAI_RESOURCES/providers/Microsoft.Compute/virtualMachines/ProdigiesAI-VM"
          },
          "dependencies": [
            "azurerm_public_ip.public_vm_ip",
            "azurerm_resource_group.common_rg",
            "azurerm_resource_group.prodigiesai_rg",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "private_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/BACKOFFICE_RESOURCES/providers/Microsoft.Network/networkInterfaces/Private-VM-NIC|/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Private-NSG",
            "network_interface_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/BACKOFFICE_RESOURCES/providers/Microsoft.Network/networkInterfaces/Private-VM-NIC",
            "network_security_group_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Private-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.private_vm_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.backoffice_rg",
            "azurerm_resource_group.common_rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "public_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/PRODIGIESAI_RESOURCES/providers/Microsoft.Network/networkInterfaces/Public-VM-NIC|/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Public-NSG",
            "network_interface_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/PRODIGIESAI_RESOURCES/providers/Microsoft.Network/networkInterfaces/Public-VM-NIC",
            "network_security_group_id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Public-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.public_vm_nic",
            "azurerm_network_security_group.public_nsg",
            "azurerm_public_ip.public_vm_ip",
            "azurerm_resource_group.common_rg",
            "azurerm_resource_group.prodigiesai_rg",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Private-NSG",
            "location": "eastus2",
            "name": "Private-NSG",
            "resource_group_name": "NETWORK_RESOURCES",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Public-To-Private",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Public-NSG",
            "location": "eastus2",
            "name": "Public-NSG",
            "resource_group_name": "NETWORK_RESOURCES",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Allow-HTTP-HTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Public-NSG/securityRules/Allow-HTTP-HTTPS",
            "name": "Allow-HTTP-HTTPS",
            "network_security_group_name": "Public-NSG",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NETWORK_RESOURCES",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_public_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Private-NSG/securityRules/Allow-Public-To-Private",
            "name": "Allow-Public-To-Private",
            "network_security_group_name": "Private-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NETWORK_RESOURCES",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/networkSecurityGroups/Public-NSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "Public-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NETWORK_RESOURCES",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/publicIPAddresses/Public-VM-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.210.0.239",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "Public-VM-PublicIP",
            "resource_group_name": "NETWORK_RESOURCES",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Private-Subnet",
            "name": "Private-Subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "NETWORK_RESOURCES",
            "virtual_network_name": "Shared-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.common_rg",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Public-Subnet",
            "name": "Public-Subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "NETWORK_RESOURCES",
            "virtual_network_name": "Shared-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.common_rg",
            "azurerm_virtual_network.shared_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "shared_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c02d208f-173a-45cb-a8aa-46b4a0edf8e9",
            "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet",
            "location": "eastus2",
            "name": "Shared-VNet",
            "resource_group_name": "NETWORK_RESOURCES",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Public-Subnet",
                "name": "Public-Subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/33f8d807-62c2-4c19-9ba0-3d3cef4f5336/resourceGroups/NETWORK_RESOURCES/providers/Microsoft.Network/virtualNetworks/Shared-VNet/subnets/Private-Subnet",
                "name": "Private-Subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.common_rg"
          ]
        }
      ]
    }
  ]
}